# Quantum-Key-Distribution-Simulator-Web

./: .gitignore  README.md  fullstack-package.json  package-lock.json  package.json
backend/: API_DOCS.md  README.md
backend/node-server/: package-lock.json  package.json  server.js
backend/rust-simulator/: Cargo.toml
backend/rust-simulator/.cargo/: config.toml
backend/rust-simulator/src/: lib.rs  main.rs  models.rs  sarg04.rs  simulator.rs
docs/: API_DOCS.md  BACKEND.md  PROJECT_STRUCTURE.md
scripts/: start-dev.sh
src/app/: globals.css  layout.tsx  page.tsx
src/components/: enhanced-photon.tsx  quantum-photon.tsx  security-analysis.tsx  simulation-controls.tsx  tutorial-modal.tsx
src/lib/: pdf-generator.ts  quantum-simulator.ts
