[package]
name = "qkd-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.18"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
rayon = "1.7"
